<resources>
    <string name="app_name">Quizer</string>
    <string name="RECORD_AUDIO_PREPARING">Preparing..</string>
    <string name="RECORD_AUDIO_READY">Ready</string>
    <string name="RECORD_AUDIO_ERROR">Error</string>
    <string name="RECORD_AUDIO_RECORDING">Recording..</string>
    <string name="RECORD_AUDIO_PLAYING">Playing..</string>
    <string name="RECORD_AUDIO_RECORD">Record</string>
    <string name="RECORD_AUDIO_PLAY">Play</string>
    <string name="RECORD_AUDIO_PAUSE">Pause</string>
    <string name="RECORD_AUDIO_PAUSED">Paused</string>
    <string name="RECORD_AUDIO_PAUSED_REC">Paused recording</string>
    <string name="RECORD_AUDIO_PAUSED_PLAY">Paused playing</string>
    <string name="RECORD_AUDIO_STOP">Stop</string>
    <string name="RECORD_AUDIO_VSL_DATA_WRITTEN">Visualization data saved to JSON and XML at </string>
    <string name="RECORD_AUDIO_SERVICE_CONNECTION_ERROR">Can\'t connect to media service</string>
    <string name="RECORD_AUDIO_ERROR_PLAYER_START">Can\'t start player</string>
    <string name="RECORD_AUDIO_ERROR_RECORDER_START">Can\'t start recorder</string>
    <string name="RECORD_AUDIO_ERROR_RECORDER_STOP">No valid audio/video data has been received</string>
    <string name="RECORD_AUDIO_ERROR_VSL_DATA">Visualization data not saved</string>
    <string name="VIEW_BACK">Назад</string>
    <string name="VIEW_EXIT_QUIZ">Выход</string>
    <string name="VIEW_CANCEL">Отмена</string>
    <string name="VIEW_APPLY">Принять</string>
    <string name="VIEW_FORWARD">Вперед</string>
    <string name="VIEW_FINISH">Завершить</string>
    <string name="VIEW_OK">ОК</string>
    <string name="VIEW_SETTINGS">Настройки</string>
    <string name="VIEW_SETTINGS_CAPS">НАСТРОЙКИ</string>
    <string name="VIEW_START">Начать</string>
    <string name="VIEW_APP_VERSION">Версия: %1$s</string>
    <string name="VIEW_SERVICE_TITLE">Сервисное обслуживание</string>
    <string name="VIEW_LOGS_TITLE">Журнал событий</string>
    <string name="VIEW_SYNC_TITLE">Синхронизация</string>
    <string name="VIEW_SYNC_TITLE_CAPS">СИНХРОНИЗАЦИЯ</string>
    <string name="VIEW_FINISH_QUIZ">Завершить анкету</string>
    <string name="VIEW_CLOSE_APP_HEADER">Выход из приложения</string>
    <string name="VIEW_CLOSE_APP_BODY">Вы уверены, что хотите выйти из приложения?</string>
    <string name="VIEW_YES">Да</string>
    <string name="VIEW_NO">Нет</string>
    <string name="VIEW_USERS_COUNT_ON_DEVICE">Количество пользователей на данном устройстве: %1$s</string>
    <string name="VIEW_VERSION_WARNING">Внимание!\nВы работаете на устройстве с версией android %1$s. Стабильная работа приложения не гарантируется.</string>
    <string name="VIEW_ALL_COUNT_QUIZ">Количество собраных анкет: %1$s</string>
    <string name="VIEW_UNSENT_COUNT_QUIZ">Количество неотправленных анкет: %1$s</string>
    <string name="VIEW_UNSENT_COUNT_AUDIO">Количество неотправленных аудио файлов: %1$s</string>
    <string name="VIEW_UNSENT_COUNT_PHOTO">Количество неотправленных фото файлов: %1$s</string>
    <string name="VIEW_DELETE_USERS">Удалить пользователей</string>
    <string name="VIEW_CLEAR_DB">Очистить базу данных</string>
    <string name="VIEW_CLEAR_DB_TITLE">Очистка базы данных</string>
    <string name="VIEW_DELETE_USER">Удалить пользователя</string>
    <string name="VIEW_UPLOAD_DATA">Выгрузить данные</string>
    <string name="VIEW_FTP_UPLOAD_DATA">Отправка через FTP</string>
    <string name="VIEW_SEND_QUIZ">Отправить анкеты</string>
    <string name="VIEW_LOGS_BTN">Журнал событий</string>
    <string name="VIEW_SEND_AUDIO">Отправить аудио</string>
    <string name="VIEW_SEND_PHOTO">Отправить фото</string>
    <string name="VIEW_EXIT_QUIZ_HEADER">Завершить анкету</string>
    <string name="VIEW_FAKE_GPS_HEADER">Обнаружено нарушение.</string>
    <string name="VIEW_EXIT_QUIZ_BODY">Вы уверены, что хотите принудительно прервать анкету? \nЕё содержимое будет потеряно.</string>
    <string name="VIEW_FAKE_GPS_BODY">На Вашем устройстве используется программа для подмены GPS-координат. Для продолжения работы необходимо её удалить.</string>
    <string name="VIEW_FAKE_GPS_ALERT">На Вашем устройстве используется программа для подмены GPS-координат. Анкета помечена как грубый брак.</string>
    <string name="VIEW_SENT_COUNT_QUIZ_FROM_THIS_DEVICE">Отправлено анкет в рамках проекта с данного устройства: %1$s</string>
    <string name="VIEW_SENT_COUNT_QUIZ_THIS_SESSION">Отправлено анкет в данном сеансе: %1$s</string>
    <string name="VIEW_SMS">СМС</string>
    <string name="VIEW_HOME_TITLE">Главный экран</string>
    <string name="VIEW_HOME_TITLE_CAPS">ГЛАВНЫЙ ЭКРАН</string>
    <string name="VIEW_SMS_TIME_INTERVAL">%1$s - %2$s</string>
    <string name="VIEW_EXIT">Выйти</string>
    <string name="VIEW_EXIT_CAPS">ВЫЙТИ</string>
    <string name="VIEW_CONFIG_TITLE">Конфигурация</string>
    <string name="VIEW_ID">ID: %1$s</string>
    <string name="VIEW_DATE">Дата: %1$s</string>
    <string name="VIEW_SETTINGS_DISPLAY_TITLE">Настройки отображения</string>
    <string name="VIEW_SETTINGS_FONT_SIZE">Размер шрифта в вопросах:</string>
    <string name="VIEW_SETTINGS_SPACING">Интервал между ответами: %1$s</string>
    <string name="VIEW_SETTINGS_EXIT_POLL_TITLE">Выбор номера (для Экзит-Пулл)</string>
    <string name="VIEW_QUOTAS_TITLE">Квоты</string>
    <string name="VIEW_QUOTAS_TITLE_CAPS">КВОТЫ</string>
    <string name="VIEW_ABOUT_TITLE">О нас</string>
    <string name="VIEW_ABOUT_TITLE_CAPS">О НАС</string>
    <string name="VIEW_BUTTON_REFRESH">Обновить</string>
    <string name="VIEW_BUTTON_INFO">Info</string>
    <string name="VIEW_BUTTON_MORE">ПОКАЗАТЬ ДЕТАЛИ</string>
    <string name="VIEW_X_FROM_Y">\u0020(%1$s из %2$s)</string>
    <string name="VIEW_X_FROM_Y_TWO">\u0020%1$s из %2$s</string>
    <string name="VIEW_STATUS_DONE">Выполнено</string>
    <string name="VIEW_STATUS_DONE_TWO">Квота закрыта</string>
    <string name="VIEW_STATUS_NOT_DONE">Не выполнено</string>
    <string name="VIEW_STATUS_NOT_DONE_TWO">Собрано</string>
    <string name="VIEW_STATUS_MORE_THAN_DONE">Перевыполненно</string>
    <string name="VIEW_NO_QUOTAS_BY_QUERY">Список квот по заданному фильтру пуст</string>
    <string name="VIEW_EMPTY_QUOTAS">Список квот пуст</string>
    <string name="VIEW_EMPTY_SMS">Список СМС волн пуст</string>
    <string name="VIEW_BUTTON_SEND">Отправить</string>
    <string name="VIEW_BUTTON_RESEND">Повторить отправку</string>
    <string name="VIEW_TOGGLE_SHOW_NOT_COMPLETED_QUOTAS">Отображать не выполненные</string>
    <string name="VIEW_TREE_DOTS">Нажмите чтобы развернуть…</string>
    <string name="VIEW_QUESTION_ANSWER_TABLE_LABEL">ВОПРОС&lt;br /&gt;ОТВЕТ</string>
    <string name="STATUS_SENT">Отправлено</string>
    <string name="STATUS_NOT_SENT">Не отправлено</string>
    <string name="TEXT_HINT_INPUT_ACTIVATION_KEY">Введите ключ</string>
    <string name="TEXT_HINT_INPUT_LOGIN">Введите логин</string>
    <string name="TEXT_HINT_INPUT_PASSWORD">Введите пароль</string>
    <string name="TEXT_HINT_DEFAULT_PLACEHOLDER">Введите ответ</string>
    <string name="TEXT_HINT_SEARCH">Поиск</string>
    <string name="TEXT_HINT_TIME">Укажите время</string>
    <string name="TEXT_HINT_DATE">Укажите дату</string>
    <string name="NOTIFICATION_EMPTY_ACTIVATION_KEY">Ключ активации пуст. Пожалуйста, введите ключ и повторите попытку.</string>
    <string name="NOTIFICATION_INTERNET_CONNECTION_ERROR">Ошибка подключения к серверу. Проверьте подключение к интернету и повторите снова.</string>
    <string name="SAVED_DATA_LOGIN">Удалось войти под сохраненными локальными данными.</string>
    <string name="WRONG_LOGIN">Неверный логин или пароль.</string>
    <string name="NOTIFICATION_SERVER_ERROR">Ошибка сервера.</string>
    <string name="NOTIFICATION_SERVER_CONNECTION_ERROR">Нет ответа от сервера. Возможны проблемы с подключением к сети интеренет.</string>
    <string name="NOTIFICATION_SERVER_RESPONSE_ERROR">Ошибка при ответе сервера.</string>
    <string name="NOTIFICATION_EMPTY_LOGIN_OR_PASSWORD">Логин или пароль пуст. Пожалуйста, введите логин и пароль, а затем повторите попытку входа.</string>
    <string name="NOTIFICATION_MAX_USER_COUNT">Достигнуто максимальное количество пользователей на устройстве (%1$s)! Обратитесь к менеджеру!</string>
    <string name="NOTIFICATION_SHORT_LOGIN_ERROR">Минимальная длина логина - 3 символа. Пожалуйста, введите логин и повторите попытку входа.</string>
    <string name="NOTIFICATION_MIN_ANSWERS_TABLE">Выберите минимум 1 вариант ответа в каждом вопросе из таблицы.</string>
    <string name="NOTIFICATION_EMPTY_TABLE">В таблице нет доступных вопросов.</string>
    <string name="NOTIFICATION_SELECT_ANY_ITEM">Необходимо выбрать вариант ответа в каждом вопросе.</string>
    <string name="NOTIFICATION_MIN_ANSWERS">Выберите минимум %1$s ответ(а).</string>
    <string name="NOTIFICATION_MAX_ANSWERS">Вы можете выбрать максимум %1$s ответ(а).</string>
    <string name="NOTIFICATION_INTERNAL_APP_ERROR">Внутренняя ошибка приложения. Error code: </string>
    <string name="NOTIFICATION_NEXT_ELEMENT_CALCULATION_ERROR">Ошибка при подсчете следующего элемента.</string>
    <string name="NOTIFICATION_PERMISSION_ERROR">Вы не можете продолжить, так как все запрашиваемые разрешения обязательны для продолжения работы.</string>
    <string name="NOTIFICATION_NO_CONNECTION_SAVING_QUIZ">Ошибка при соединении с сервером. Анкета сохранена в устройстве.</string>
    <string name="NOTIFICATION_SENDING_ERROR_EMPTY_TOKENS_LIST">Сервер не принял отправленные данные.</string>
    <string name="NOTIFICATION_SENDING_ERROR_EMPTY_USERS_LIST">Пользователи не существуют для текущей отправки.</string>
    <string name="NOTIFICATION_NO_NUMBERS_AVAILABLE">Список номеров для отправки анкет через СМС пуст.</string>
    <string name="NOTIFICATION_SENDING_SMS">Отправка СМС…</string>
    <string name="NOTIFICATION_SUCCESS_DELIVERED_SMS">Сообщение успешно доставлено.</string>
    <string name="NOTIFICATION_UNSUCCESS_DELIVERED_SMS">Сообщение не удалось доставить.</string>
    <string name="NOTIFICATION_SMS_COPIED">Сообщение скопированно.</string>
    <string name="NOTIFICATION_SENDING_ERROR_NO_CONNECTION">Отправка не осуществлена по причине отсутствия интернета. Проверьте подключение к интернету и повторите попытку снова.</string>
    <string name="NOTIFICATION_CANCEL_SMS_SENDING">Отправка через СМС отменена.</string>
    <string name="NOTIFICATION_SUCCESS_SENT_SMS">Сообщение успешно отправлено.</string>
    <string name="NOTIFICATION_UNSUCCESS_SENT_SMS">Сообщение не удалось отправить.</string>
    <string name="NOTIFICATION_QUIZ_IS_FINISHED">Анкета завершена успешно.</string>
    <string name="NOTIFICATION_CURRENT_GPS">Текущие GPS координаты:</string>
    <string name="NOTIFICATION_GPS_IS_TURN_OFF">GPS выключен.</string>
    <string name="NOTIFICATION_PLEASE_SEND_QUIZ">Действие невозможно. Сначала отправьте все анкеты.</string>
    <string name="NOTIFICATION_FILL_INPUT">Заполните текстовое поле в выбранных вариантах ответа.</string>
    <string name="NOTIFICATION_DOWNLOADED_COUNT_FILES">Скачано %1$s файл(а)</string>
    <string name="NOTIFICATION_DOWNLOADING_FILES_ERROR">Ошибка при загрузке медиа-файлов.</string>
    <string name="NOTIFICATION_FORCE_GPS_ERROR">Работа без GPS координат невозможна в данном режиме работы! Спутники не инициализированы. Выйдите на отрытое пространство и дождитесь инициализации GPS.</string>
    <string name="NOTIFICATION_SENDING">Идет отправка…</string>
    <string name="NOTIFICATION_DELETING_DB">Идет очистка базы данных…</string>
    <string name="NOTIFICATION_UPLOADING">Идет выгрузка…</string>
    <string name="NOTIFICATION_UPDATING">Идет обновление…</string>
    <string name="NOTIFICATION_ANSWER_NOT_AVAILABLE_TABLE_QUESTION">Невозможно выбрать данный элемент.</string>
    <string name="NOTIFICATION_ERROR_CANNOT_UPDATE_QUOTAS">Не удалось загрузить список квот.</string>
    <string name="VIEW_BUTTON_LOGIN">Войти</string>
</resources>