<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <pro.quizer.quizerexit.view.resizeble.button.ResizableButton
            android:id="@+id/back_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/VIEW_BACK" />

        <pro.quizer.quizerexit.view.resizeble.button.ResizableButton
            android:id="@+id/exit_btn"
            style="@style/ButtonRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/VIEW_EXIT_QUIZ"
            android:textColor="#fff" />

        <pro.quizer.quizerexit.view.resizeble.button.ResizableButton
            android:id="@+id/forward_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/VIEW_FORWARD" />

    </android.support.v7.widget.LinearLayoutCompat>

</merge>