<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
                android:id="@+id/user_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="user4" />

            <include layout="@layout/view_divider"/>

            <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
                android:layout_marginTop="12dp"
                android:id="@+id/sended_q_from_this_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="ПУСТО" />

            <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
                android:id="@+id/sended_q_in_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="ПУСТО" />

            <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
                android:id="@+id/unsended_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="ПУСТО" />

            <Button
                android:layout_marginBottom="12dp"
                android:id="@+id/send_q"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/VIEW_SEND_QUIZ" />

            <include layout="@layout/view_divider"/>

            <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
                android:layout_marginTop="12dp"
                android:id="@+id/unsended_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="ПУСТО" />

            <Button
                android:layout_marginBottom="12dp"
                android:id="@+id/send_audio"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/VIEW_SEND_AUDIO" />

            <include layout="@layout/view_divider"/>

            <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
                android:layout_marginTop="12dp"
                android:id="@+id/unsended_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="ПУСТО" />

            <Button
                android:id="@+id/send_photo"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/VIEW_SEND_PHOTO" />

            <Button
                android:id="@+id/sync_sms"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/VIEW_SMS" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/view_progress" />

</RelativeLayout>