<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_home" />

    <RelativeLayout
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingRight="56dp"
        android:paddingLeft="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <pro.quizer.quizerexit.view.resizeble.textview.MediumResizableTextView
            android:id="@+id/config_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Экзит пул" />

        <pro.quizer.quizerexit.view.resizeble.textview.MediumResizableTextView
            android:id="@+id/config_agreement"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/config_name"
            android:gravity="center|top"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="Экзит пул agreement..." />

        <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
            android:id="@+id/count_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            tools:text="Всего собрано: 10" />

        <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
            android:id="@+id/count_sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/count_all"
            android:textColor="@android:color/white"
            tools:text="Отправлено: 10" />

        <pro.quizer.quizerexit.view.resizeble.textview.SmallResizableTextView
            android:id="@+id/current_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="Экзит пул agreement..." />

        <pro.quizer.quizerexit.view.resizeble.button.ResizableButton
            android:id="@+id/start"
            style="@style/ButtonStyleWithoutBorder"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/VIEW_START" />

        <pro.quizer.quizerexit.view.resizeble.button.ResizableButton
            android:id="@+id/exit_btn"
            style="@style/ButtonStyleWithoutBorder"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/VIEW_EXIT" />

        <pro.quizer.quizerexit.view.resizeble.button.ResizableButton
            android:id="@+id/quotas"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/VIEW_QUOTAS_TITLE" />

    </RelativeLayout>

    <include layout="@layout/view_progress" />

</FrameLayout>